* Re-implemented clantag support. 'plain' and 'regex' clantags are scanned in 
the order configured. Blacklisted clantags can be defined to prevent certain
patterns from becoming a clan. UTF8 encoded tags should now work properly too. 
Currently a player is scanned for a clantag when they disconnect. This method 
of checking may be changed in the future to reduce overhead.

Version 3.2 (only available via SVN)
* Fixed halflife::parseprops to properly parse player names in event parameters 
that have double quotes (") in their name.
* TF2: Team 'pointcaptured' old style events will once again give bonus points 
to players (along with the newer style of the event
* TF2: double bonus points for player 'dominations' are no longer given.
* Fixed typo de_interno to de_inferno in heat.xml
* Fixed a couple minor issues in the installer.
* Implemented Halflife GUNGAME support.
* Implemented Call of Duty 4 support.
* Implemented Soldat support.
* Enhanced HTML output with GZIP support.
* Fixed Feeder::stream support to properly process halflife log streams.

Version 3.1 (05/01/2008)
* Implemented CMS and plugin architecture in the PHP front-end.
* Recoded theme routines to be more robust and tolerant.
* Redesigned default theme template. XHTML compliant and easier to maintain.
(pre-3.1 themes are NOT backwards compatible!)
* Log state routines have been recoded and made more accurate.
* Logsources have been recoded and have their own config table.
* Events code has been recoded and have their own config table.
* Events can be configured via the ACP and new event code can be dropped into
the 'Events' directory if users wish to add new event handlers w/o modifying
existing code. Wiki doc's will need to be updated (yuk)
* Implemented -maxlogs, -maxlines command line options to allow stats updates
to exit early. This will help systems under resource restraints.
* Split plr_ids table (name,ipaddr,steamid) into 3 separate tables to make