@@ -15,6 +15,7 @@ the order configured. Blacklisted clantags can be defined to prevent certain
 patterns from becoming a clan. UTF8 encoded tags should now work properly too. 
 Currently a player is scanned for a clantag when they disconnect. This method 
 of checking may be changed in the future to reduce overhead.
+* Player ranking rules and rank updates have been recoded to be more efficient.
 
 Version 3.2 (only available via SVN)
 * Fixed halflife::parseprops to properly parse player names in event parameters 
